# verstun

./: .dockerignore  .env.example  .gitignore  Caddyfile.example  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
src/api/: app.py
src/bot/: basic.py  channels.py  common.py  document.py  keyboards.py  main.py  publish.py  settings.py  storage.py  texts.py  users.py
src/middleware/: __init__.py  owner.py
src/post/: __init__.py  markdown.py  media.py
tests/fixtures/: rich-message-smoke.md
tests/unit/: test_bot_storage.py  test_bot_texts.py  test_channel_posting.py  test_document_handler.py  test_main_lifecycle.py  test_markdown.py  test_media.py  test_owner_middleware.py  test_smoke.py
